--- a/styles.css
+++ b/styles.css
@@ -594,8 +594,12 @@ video {
   font-weight: 600;
 }
 
-.h-96 {
-  height: 24rem;
+.h-72 {
+  height: 18rem;
+}
+
+.h-80 {
+  height: 20rem;
 }
 
 .text-xl {
@@ -618,9 +622,18 @@ video {
   margin-right: 2rem;
 }
 
+.mr-12 {
+  margin-right: 3rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-6 {
@@ -712,6 +725,10 @@ video {
 
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-auto {
