--- a/styles.css
+++ b/styles.css
@@ -562,8 +562,16 @@ video {
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .flex {
@@ -582,6 +590,10 @@ video {
   justify-content: space-between;
 }
 
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
@@ -598,10 +610,6 @@ video {
   height: 18rem;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -610,6 +618,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl {
@@ -622,6 +635,10 @@ video {
   margin-right: 2rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mr-12 {
   margin-right: 3rem;
 }
@@ -629,11 +646,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .px-6 {
@@ -666,6 +678,10 @@ video {
   position: relative;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
 .top-6 {
   top: 1.5rem;
 }
@@ -678,8 +694,20 @@ video {
   top: 2rem;
 }
 
+.left-12 {
+  left: 3rem;
+}
+
+.top-14 {
+  top: 3.5rem;
+}
+
 .top-20 {
   top: 5rem;
+}
+
+.left-24 {
+  left: 6rem;
 }
 
 .top-32 {
@@ -727,12 +755,12 @@ video {
   letter-spacing: 0.1em;
 }
 
-.w-96 {
-  width: 24rem;
-}
-
 .w-auto {
   width: auto;
+}
+
+.w-6\/12 {
+  width: 50%;
 }
 
 @-webkit-keyframes spin {
