--- a/styles.css
+++ b/styles.css
@@ -562,6 +562,10 @@ video {
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
+.bg-center {
+  background-position: center;
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -678,8 +682,8 @@ video {
   position: relative;
 }
 
-.top-4 {
-  top: 1rem;
+.bottom-4 {
+  bottom: 1rem;
 }
 
 .top-6 {
@@ -694,20 +698,28 @@ video {
   top: 2rem;
 }
 
-.left-12 {
-  left: 3rem;
+.top-12 {
+  top: 3rem;
 }
 
-.top-14 {
-  top: 3.5rem;
+.right-12 {
+  right: 3rem;
+}
+
+.bottom-12 {
+  bottom: 3rem;
+}
+
+.left-12 {
+  left: 3rem;
 }
 
 .top-20 {
   top: 5rem;
 }
 
-.left-24 {
-  left: 6rem;
+.right-20 {
+  right: 5rem;
 }
 
 .top-32 {
@@ -730,6 +742,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 
 .text-gray-700 {
