--- a/styles.css
+++ b/styles.css
@@ -950,6 +950,10 @@ video {
   gap: 3rem;
 }
 
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
