added plants page

--- a/styles.css
+++ b/styles.css
@@ -743,6 +743,10 @@ video {
   margin-right: 4rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -781,6 +785,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -804,6 +813,11 @@ video {
 .px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 
 .pr-2 {
@@ -1147,12 +1161,26 @@ video {
     border-bottom-width: 0px;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .md\:min-h-screen {
@@ -1177,6 +1205,10 @@ video {
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 }
 
