--- a/styles.css
+++ b/styles.css
@@ -611,6 +611,10 @@ video {
   border-radius: 1.5rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border-t-2 {
   border-top-width: 2px;
 }
@@ -659,6 +663,10 @@ video {
   font-weight: 700;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-64 {
   height: 16rem;
 }
@@ -673,6 +681,11 @@ video {
 
 .h-auto {
   height: auto;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-sm {
@@ -713,6 +726,10 @@ video {
 .mx-12 {
   margin-left: 3rem;
   margin-right: 3rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-4 {
@@ -957,6 +974,10 @@ video {
 
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-auto {
